--- a/frontend/src/components/IntegrantesCirculoForm/IntegranteCirculo.css
+++ b/frontend/src/components/IntegrantesCirculoForm/IntegranteCirculo.css
@@ -189,6 +189,32 @@
     margin-right: 10px;
   }
   
+  .search-results {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 1px solid #ddd;
+    max-height: 150px;
+    overflow-y: auto;
+    background-color: white;
+    position: absolute;
+    z-index: 1000;
+    width: 100%; /* Match the width of the input field */
+    max-width: 900px; /* Optional: Set a maximum width */
+  }
+  
+  .search-result-item {
+    padding: 10px;
+    cursor: pointer;
+    white-space: nowrap; /* Prevent text wrapping */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Add ellipsis for overflowing text */
+  }
+  
+  .search-result-item:hover {
+    background-color: #f0f0f0;
+  }
+  
   @media (max-width: 768px) {
     .form-container {
       padding: 20px;
