--- a/frontend/src/components/IntegrantesCirculo/IntegranteCirculo.css
+++ b/frontend/src/components/IntegrantesCirculo/IntegranteCirculo.css
@@ -406,7 +406,8 @@ input:focus {
 
 .neumorphic-table th.fixed-column {
   position: sticky;
-  left: 0;
+  right: 0;
+  left: unset;
   z-index: 20;
   width: 90px;
   min-width: 90px;
@@ -414,10 +415,11 @@ input:focus {
 
 .neumorphic-table td.fixed-column {
   position: sticky;
-  left: 0;
+  right: 0;
+  left: unset;
   background-color: var(--background-color);
   z-index: 5;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .neumorphic-table tr {
